--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -8,11 +8,11 @@
 // Start with assigning color names to specific hex values.
 $white:  #fff;
 $black:  #000;
-$red:    #d9534f;
-$orange: #f0ad4e;
-$yellow: #ffd500;
-$green:  #5cb85c;
-$blue:   #0275d8;
+$red:    #e74c3c;
+$orange: #e67e22;
+$yellow: #f1c40f;
+$green:  #2ecc71;
+$blue:   #2980b9;
 $teal:   #5bc0de;
 $pink:   #ff5b77;
 $purple: #613d7c;
@@ -73,38 +73,3 @@ $font-family-sans-serif: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI
 $font-family-serif:      Georgia, "Times New Roman", Times, serif;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base:       $font-family-sans-serif;
-
-$font-size-base: 1rem; // Assumes the browser default, typically `16px`
-$font-size-lg:   1.25rem;
-$font-size-sm:   .875rem;
-$font-size-xs:   .75rem;
-
-// Buttons
-//
-// For each of Bootstrap's buttons, define text, background and border color.
-
-$btn-primary-color:              $white;
-$btn-primary-bg:                 $brand-primary;
-$btn-primary-border:             $btn-primary-bg;
-
-$btn-secondary-color:            $gray-dark;
-$btn-secondary-bg:               $white;
-$btn-secondary-border:           #ccc;
-
-$btn-info-color:                 $white;
-$btn-info-bg:                    $brand-info;
-$btn-info-border:                $btn-info-bg;
-
-$btn-success-color:              $white;
-$btn-success-bg:                 $brand-success;
-$btn-success-border:             $btn-success-bg;
-
-$btn-warning-color:              $white;
-$btn-warning-bg:                 $brand-warning;
-$btn-warning-border:             $btn-warning-bg;
-
-$btn-danger-color:               $white;
-$btn-danger-bg:                  $brand-danger;
-$btn-danger-border:              $btn-danger-bg;
-
-$btn-link-disabled-color:        $gray-light;
