--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,9 +6,28 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 @import "node_modules/bootstrap-vue/dist/bootstrap-vue";
 
-.fade-enter-active, .fade-leave-active {
-  transition: opacity .5s
+#booth {
+    position: relative;
 }
-.fade-enter, .fade-leave-to {
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s ease;
+}
+.fade-enter, .fade-leave-active {
   opacity: 0
+}
+.child-view {
+  position: absolute;
+  width: 100%;
+  transition: all .5s cubic-bezier(.55,0,.1,1);
+}
+.slide-left-enter, .slide-right-leave-active {
+  opacity: 0;
+  -webkit-transform: translate(30px, 0);
+  transform: translate(30px, 0);
+}
+.slide-left-leave-active, .slide-right-enter {
+  opacity: 0;
+  -webkit-transform: translate(-30px, 0);
+  transform: translate(-30px, 0);
 }
