Verify phone styling

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,4 +27,8 @@ button {
     background: $gray-lighter;
     margin-top: 2rem;
     padding: 1rem;
+
+    h3 {
+        font-weight: bold;
+    }
 }
