--- a/resources/assets/sass/_animations.scss
+++ b/resources/assets/sass/_animations.scss
@@ -18,3 +18,17 @@
   -webkit-transform: translate(-30px, 0);
   transform: translate(-30px, 0);
 }
+
+.slide-enter, .slide-leave-to {
+    max-height: 0;
+}
+
+.slide-enter-to, .slide-leave {
+    max-height: 500px;
+}
+
+.slide-enter-active,
+.slide-leave-active {
+    overflow: hidden;
+    transition: max-height .5s ease;
+}
