--- a/resources/assets/sass/_animations.scss
+++ b/resources/assets/sass/_animations.scss
@@ -32,3 +32,53 @@
     overflow: hidden;
     transition: max-height .5s ease;
 }
+
+@keyframes bounce-in {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes thumbs-up {
+    0% {
+        opacity: 0;
+        transform: translate(0, 75px) rotate(20deg);
+    }
+    50% {
+        opacity: 1;
+        transform: translate(0, -50px) rotate(-20deg);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0, 0) rotate(0);
+    }
+}
+
+@keyframes thumbs-down {
+    0% {
+        opacity: 0;
+        transform: translate(0, -20px);
+    }
+    25% {
+        opacity: 1;
+        transform: translate(0, 10px);
+    }
+    50% {
+        opacity: 1;
+        transform: translate(0, -10px);
+    }
+    75% {
+        opacity: 1;
+        transform: translate(0, 10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0, 0);
+    }
+}
