--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -34,6 +34,10 @@ button {
     h3 {
         font-weight: bold;
     }
+
+    hr {
+        margin: 1rem 0;
+    }
 }
 
 // Sidebar
@@ -79,15 +83,13 @@ button {
 
     &__list--links {
         a {
-            position: relative;
-            display: block;
-            padding-left: 1.6rem;
+        	display: block;
+        	text-indent: -1rem;
+            margin-left: 2rem;
         }
 
         .fa {
-            position: absolute;
-            left: 0;
-            top: 4px;
+            margin-right: 0.5rem;
         }
     }
 }
