--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -1,3 +1,27 @@
+.social-links {
+    li {
+        display: inline-block;
+        font-size: 1.25rem;
+    }
+
+    .fa {
+        font-size: 1.75rem;
+    }
+
+    a {
+        display: block;
+        margin-left: 0.5rem;
+    }
+
+    a:hover {
+        text-decoration: none;
+    }
+}
+
+.languages {
+
+}
+
 .vote-info {
     padding: 1rem;
     margin-bottom: 2rem;
