--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -1,4 +1,11 @@
+.header {
+    margin-bottom: 1rem;
+}
+
 .social-links {
+    margin: 0 1rem 0 auto;
+    padding: 0;
+
     li {
         display: inline-block;
         font-size: 1.25rem;
@@ -19,7 +26,63 @@
 }
 
 .languages {
+    margin: 0;
+    padding: 0;
+    position: relative;
 
+    &__current {
+        list-style: none;
+        border: 1px $gray-400 solid;
+
+        & > a {
+            display: block;
+            padding: 0.25rem 1rem;
+
+            .fa {
+                margin-left: 0.25rem;
+            }
+        }
+
+        &:hover .languages__menu {
+            display: block;
+        }
+
+        &:hover {
+            background: $gray-light;
+            border: 1px $gray-light solid;
+
+            a {
+                text-decoration: none;
+                color: #FFF;
+            }
+        }
+    }
+
+    &__menu {
+        padding: 0;
+        margin: 0;
+        display: none;
+        position: absolute;
+        z-index: 100;
+        left: 0;
+        right: 0;
+        background: $gray-light;
+        border-top: 1px $gray-600 solid;
+
+        li {
+            list-style: none;
+        }
+
+        a {
+            display: block;
+            color: #FFF;
+            padding: 0.25rem 1rem;
+
+            &:hover {
+                background: $gray-600;
+            }
+        }
+    }
 }
 
 .vote-info {
