--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -1,10 +1,19 @@
 .header {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+}
+
+.links {
+    display: flex;
+    align-items: center;
 }
 
 .social-links {
     margin: 0 1rem 0 auto;
-    padding: 0;
+
+    ul {
+        padding: 0;
+        margin: 0;
+    }
 
     li {
         display: inline-block;
@@ -33,13 +42,16 @@
     &__current {
         list-style: none;
         border: 1px $gray-400 solid;
+        min-width: 140px;
 
         & > a {
             display: block;
             padding: 0.25rem 1rem;
 
             .fa {
-                margin-left: 0.25rem;
+                position: absolute;
+                top: 0.5rem;
+                right: 1rem;
             }
         }
 
@@ -67,7 +79,6 @@
         left: 0;
         right: 0;
         background: $gray-light;
-        border-top: 1px $gray-600 solid;
 
         li {
             list-style: none;
@@ -77,6 +88,7 @@
             display: block;
             color: #FFF;
             padding: 0.25rem 1rem;
+            border-top: 1px $gray-600 solid;
 
             &:hover {
                 background: $gray-600;
@@ -86,9 +98,17 @@
 }
 
 .vote-info {
+    display: flex;
     padding: 1rem;
     margin-bottom: 2rem;
     background: $gray-lighter;
+
+    &__text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-right: 1rem;
+    }
 
     h2 {
         font-size: 2rem;
@@ -109,7 +129,9 @@
 .calendar {
     text-align: center;
     border: 3px rgba(0, 0, 0, 0.15) solid;
-    margin: -1rem -1rem -1rem 1rem;
+    margin: -1rem -1rem -1rem auto;
+    min-width: 140px;
+    background: #FFF;
 
     &__heading {
         color: #FFF;
@@ -129,5 +151,42 @@
 
     &__date-columns .col:first-child {
         border-right: 1px rgba(0, 0, 0, 0.15) dashed;
+    }
+}
+
+@include media-breakpoint-down(sm) {
+    .logo {
+        order: 2;
+        text-align: center;
+    }
+
+    .links {
+        order: 1;
+        justify-content: center;
+        margin-bottom: 1rem;
+        padding-bottom: 1rem;
+        border-bottom: 1px $gray-lighter solid;
+        margin-top: -1rem;
+        padding-top: 1rem;
+
+        .social-links {
+            margin-left: 0;
+        }
+
+        .languages {
+            background: #FFF;
+
+            &__menu a {
+                padding: 1rem;
+            }
+        }
+    }
+
+    .vote-info {
+        flex-direction: column;
+    }
+
+    .calendar {
+        margin: 1rem -1rem -1rem -1rem;
     }
 }
