Add "awaiting results" page

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -30,5 +30,6 @@ button {
 @import "header";
 @import "sidebar";
 @import "booth";
+@import "placeholder";
 @import "footer";
 @import "animations";
