Add public results page

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -30,6 +30,7 @@ button {
 @import "header";
 @import "sidebar";
 @import "booth";
+@import "results";
 @import "placeholder";
 @import "footer";
 @import "animations";
