--- a/resources/assets/sass/_results.scss
+++ b/resources/assets/sass/_results.scss
@@ -33,6 +33,7 @@
     }
 
     &__card {
+        width: 100%;
         display: block;
         position: relative;
         padding: 1rem 3rem 5rem 1rem;
@@ -43,7 +44,7 @@
         &:hover {
             text-decoration: none;
             box-shadow: 0px 2px 25px -5px rgba(0, 0, 0, 0.6);
-            transform: scale(1.04);
+            transform: scale(1.02);
         }
     }
 
@@ -70,5 +71,9 @@
 
     .progress {
         border-radius: 20px;
+    }
+
+    .progress-bar {
+        animation: loadbar 2s normal forwards ease-in-out;
     }
 }
