--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -29,6 +29,7 @@ button {
 // Modules
 @import "header";
 @import "sidebar";
+@import "about";
 @import "booth";
 @import "results";
 @import "placeholder";
