--- a/resources/assets/sass/_about.scss
+++ b/resources/assets/sass/_about.scss
@@ -22,6 +22,67 @@
     }
 }
 
+.options-widget {
+    border-bottom: 1px $gray-lighter solid;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+
+    &:last {
+        border-bottom: 0;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+
+    h4 {
+        color: $gray;
+        font-size: 1.25rem;
+    }
+
+    .card-columns {
+        column-gap: 1.5rem;
+    }
+
+    &__random {
+        margin-top: 0.5rem;
+        font-size: 0.75rem;
+        color: $gray-500;
+    }
+}
+
+.option {
+    &__card {
+        width: 100%;
+        display: block;
+        position: relative;
+        padding: 1rem;
+        box-shadow: 0px 2px 15px -5px rgba(0, 0, 0, 0.5);
+        margin-bottom: 0.75rem;
+        margin-top: 0.75rem;
+        transition: ease-out 0.1s;
+
+        &:hover {
+            text-decoration: none;
+            box-shadow: 0px 2px 25px -5px rgba(0, 0, 0, 0.6);
+            transform: scale(1.02);
+        }
+
+        h5 {
+            margin-bottom: 0;
+        }
+    }
+
+    &__cost {
+        color: $gray-500;
+        font-size: 0.75rem;
+        margin-top: 0.5rem;
+    }
+}
+
+.option.card {
+    border: 0;
+    margin: 0;
+}
+
 .calendars {
     margin: 2rem 0;
 
