--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -2,6 +2,12 @@
     margin-bottom: 2rem;
 }
 
+.logo {
+    img {
+        max-width: 350px;
+    }
+}
+
 .links {
     display: flex;
     align-items: center;
