--- a/resources/assets/sass/_footer.scss
+++ b/resources/assets/sass/_footer.scss
@@ -7,6 +7,10 @@
         margin-right: 0.5rem;
         white-space: nowrap;
     }
+
+    a {
+        word-break: break-word;
+    }
 }
 
 address {
