Update FontAwesome to 5.0-beta7

--- a/resources/assets/sass/_booth.scss
+++ b/resources/assets/sass/_booth.scss
@@ -34,7 +34,7 @@
             background: $brand-danger;
         }
 
-        .fa {
+        .far {
             font-size: 4rem;
             animation: thumbs-down 1s;
             margin-bottom: 1rem;
