--- a/resources/assets/sass/_sidebar.scss
+++ b/resources/assets/sass/_sidebar.scss
@@ -70,7 +70,7 @@ $sidebar-text-secondary: lighten($sidebar-text, 15%);
         	display: flex;
         }
 
-        .fa {
+        .far {
             margin-right: 0.5rem;
         }
     }
