--- a/resources/assets/sass/_about.scss
+++ b/resources/assets/sass/_about.scss
@@ -10,7 +10,7 @@
         top: 0;
         left: -4rem;
 
-        .fa {
+        .fa, .far {
             font-size: 3rem;
             color: $brand-primary;
         }
