--- a/resources/assets/sass/_booth.scss
+++ b/resources/assets/sass/_booth.scss
@@ -1,6 +1,3 @@
-$shadow: 0 2px 10px -2px rgba(0,0,0,.2);
-$raised-shadow: 0 14px 32px 0 rgba(0,0,0,.2);
-
 .ballot-box {
     background: $gray-lighter;
     padding: 1.5rem;
@@ -141,7 +138,7 @@ $raised-shadow: 0 14px 32px 0 rgba(0,0,0,.2);
         transition-timing-function: ease-out;
         transition-duration: .15s;
         transform: translateY(0);
-        box-shadow: $shadow;
+        box-shadow: $card-shadow;
         border: 2px darken($gray-lighter, 10%) solid;
         border-radius: 2px;
         overflow: hidden;
@@ -149,18 +146,18 @@ $raised-shadow: 0 14px 32px 0 rgba(0,0,0,.2);
         &:hover {
             background: lighten($brand-primary, 50%);
             transform: translateY(-4px);
-            box-shadow: $raised-shadow;
+            box-shadow: $card-raised-shadow;
             border: 2px lighten($brand-primary, 10%) solid;
         }
 
         &:active {
-            background: lighten($brand-primary, 40%);
+            background: lighten($brand-primary, 45%);
         }
 
         &.selected {
             background: $brand-primary;
             color: #FFF;
-            box-shadow: $raised-shadow;
+            box-shadow: $card-raised-shadow;
             transform: translateY(-4px);
             border-color: $brand-primary;
 
@@ -182,7 +179,7 @@ $raised-shadow: 0 14px 32px 0 rgba(0,0,0,.2);
         &.disabled:hover {
             background: #FFF;
             color: $gray-lightest;
-            box-shadow: $shadow;
+            box-shadow: $card-shadow;
             transform: none;
             border: 2px darken($gray-lighter, 10%) solid;
         }
@@ -219,12 +216,6 @@ $raised-shadow: 0 14px 32px 0 rgba(0,0,0,.2);
         }
     }
 
-    .booth-mode .template-2column {
-        .list-group-item {
-            width: 33.3%;
-        }
-    }
-
     .template-cards {
         .option-group {
             column-count: 2;
@@ -233,6 +224,18 @@ $raised-shadow: 0 14px 32px 0 rgba(0,0,0,.2);
 
         .option {
             height: 160px;
+        }
+    }
+
+    .booth-mode .template-2column {
+        .list-group-item {
+            width: 33.3%;
+        }
+    }
+
+    .booth-mode .template-cards {
+        .option-group {
+            column-count: 3;
         }
     }
 }
