--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -73,3 +73,7 @@ $font-family-sans-serif: "Roboto", -apple-system, system-ui, BlinkMacSystemFont,
 $font-family-serif:      Georgia, "Times New Roman", Times, serif;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base:       $font-family-sans-serif;
+
+// Shadows for self-raising cards
+$card-shadow: 0 2px 10px -2px rgba(0,0,0,.2);
+$card-raised-shadow: 0 14px 32px 0 rgba(0,0,0,.2);
