--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -1,26 +1,54 @@
-.social-links {
-    margin: 0 1rem 0 auto;
-
-    ul {
-        padding: 0;
-        margin: 0;
+.navbar {
+  .navbar-brand {
+    h1 {
+      margin-bottom: 0;
     }
+  }
 
-    li {
-        display: inline-block;
-        font-size: 1.25rem;
-    }
+  &.navbar-dark a {
+    color: $white;
+  }
 
-    .fab, .fa {
-        font-size: 1.75rem;
-    }
+  &-social {
+    margin-right: 1rem;
 
     a {
-        display: block;
-        margin-left: 0.5rem;
+      margin: 0 0.5rem;
+      opacity: 0.75;
+      transition: 0.15s ease-in-out;
+
+      &:hover {
+        opacity: 1;
+        text-decoration: none;
+      }
     }
 
-    a:hover {
-        text-decoration: none;
+    .fa, .fab {
+      font-size: 1.25rem;
     }
+  }
+}
+
+.vote-info {
+  background: $gray-lightest;
+  padding: 2rem;
+  margin-bottom: 2rem;
+
+  h2 {
+    font-size: 2.5rem;
+    font-weight: 900;
+    line-height: 1;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .vote-info {
+    h2 {
+      font-size: 3rem;
+    }
+
+    h2, p {
+      margin-right: 100px;
+    }
+  }
 }
