--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -5,3 +5,36 @@ body {
 hr {
     margin: 2rem 0;
 }
+
+.big-button {
+  display: inline-block;
+  position: relative;
+  background: $white;
+  font-size: 1.25rem;
+  font-weight: bold;
+  padding: 0.75rem 2rem;
+  border-radius: 4px;
+  box-shadow: $box-shadow;
+  transition: 0.15s ease;
+
+  &:hover {
+    box-shadow: $box-raised-shadow;
+    text-decoration: none;
+    transform: translateY(-2px);
+
+    .fa {
+      border-right: 2px darken($gray-lighter, 10%) solid;
+    }
+  }
+
+  &:active {
+    transform: translateY(2px);
+  }
+
+  .fa {
+    font-size: 1rem;
+    margin-right: 0.5rem;
+    border-right: 2px $gray-lighter solid;
+    padding-right: 0.75rem;
+  }
+}
