Add hands on the sides

--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -38,9 +38,11 @@
 }
 
 .vote-info {
+  position: relative;
   background: $gray-lightest;
   padding: 2rem;
   margin-bottom: 2rem;
+  overflow: hidden;
 
   h2 {
     font-size: 2.5rem;
@@ -50,39 +52,24 @@
 
   .vote-info__action {
     margin-top: 2rem;
+  }
 
-    a {
-      display: inline-block;
-      position: relative;
-      background: $white;
-      font-size: 1.25rem;
-      font-weight: bold;
-      padding: 0.75rem 2rem;
-      border-radius: 4px;
-      box-shadow: $box-shadow;
-      transition: 0.15s ease;
+  .left-hands {
+    width: 250px;
+    height: 250px;
+    background: url('../images/hands-left.svg');
+    background-repeat: no-repeat;
+    position: absolute;
+    left: -113px;
+  }
 
-      &:hover {
-        box-shadow: $box-raised-shadow;
-        text-decoration: none;
-        transform: translateY(-2px);
-
-        .fa {
-          border-right: 2px darken($gray-lighter, 10%) solid;
-        }
-      }
-
-      &:active {
-        transform: translateY(2px);
-      }
-
-      .fa {
-        font-size: 1rem;
-        margin-right: 0.5rem;
-        border-right: 2px $gray-lighter solid;
-        padding-right: 0.75rem;
-      }
-    }
+  .right-hands {
+    width: 250px;
+    height: 250px;
+    background: url('../images/hands-right.svg');
+    background-repeat: no-repeat;
+    position: absolute;
+    right: -103px;
   }
 }
 
