--- a/resources/assets/sass/_sidebar.scss
+++ b/resources/assets/sass/_sidebar.scss
@@ -5,8 +5,9 @@ $sidebar-text-secondary: lighten($sidebar-text, 15%);
 
 .sidebar {
     &__box {
+        position: relative;
         background: $sidebar-background;
-        padding: 1.5rem;
+        padding: 1.75rem 1.5rem 1.5rem;
         margin-bottom: 1.5rem;
 
         h3 {
@@ -15,8 +16,10 @@ $sidebar-text-secondary: lighten($sidebar-text, 15%);
         }
 
         h4 {
-            font-size: 1.15rem;
+            font-size: 0.95rem;
             color: $sidebar-text;
+            letter-spacing: 1px;
+            text-transform: uppercase;
         }
 
         hr {
@@ -26,12 +29,34 @@ $sidebar-text-secondary: lighten($sidebar-text, 15%);
         a {
             word-break: break-word;
         }
+
+        &:before {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 0;
+          right: 0;
+          height: 0.25rem;
+          background: $sidebar-text-secondary;
+        }
     }
 
     &__box--main {
         position: relative;
+        border-top: 0;
 
         &:before {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 0;
+          right: 0;
+          height: 0.25rem;
+          background: $brand-primary;
+          background: $brand-primary-gradient;
+        }
+
+        &:after {
             content: '';
             position: absolute;
             left: -2rem;
