Add fallback if no logo is set

--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -3,9 +3,7 @@
   background: $brand-primary-gradient;
 
   .navbar-brand {
-    h1 {
-      margin-bottom: 0;
-    }
+    font-weight: 700;
   }
 
   &.navbar-dark a {
