--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -81,15 +81,14 @@
     right: -103px;
   }
 
-  &.vote-info-compact {
+  &.vote-info--compact {
     h2 {
-      font-size: 1.75rem;
-      margin-right: 0;
+      font-size: 1.5rem;
+      margin-right: 100px;
     }
 
     .vote-info__intro {
-      font-size: 1rem;
-      margin-bottom: 0;
+      display: none;
     }
 
     .vote-info__action {
@@ -114,6 +113,23 @@
   }
 }
 
+@include media-breakpoint-up(md) {
+  .vote-info {
+    &.vote-info--compact {
+      h2 {
+        font-size: 1.75rem;
+        margin-right: 0;
+      }
+
+      .vote-info__intro {
+        font-size: 1rem;
+        margin-bottom: 0;
+        display: block;
+      }
+    }
+  }
+}
+
 @include media-breakpoint-up(lg) {
   .vote-info {
     h2 {
@@ -134,6 +150,7 @@
   .navbar-languages {
     margin: 0;
   }
+
 }
 
 @media only screen and (min-width: 1400px) {
