--- a/resources/assets/sass/_booth.scss
+++ b/resources/assets/sass/_booth.scss
@@ -2,6 +2,7 @@
     background: $gray-lighter;
     padding: 1.5rem;
     margin-bottom: 1.5rem;
+    @include border-radius(0.25rem);
 
     h3 {
         font-weight: bold;
@@ -12,11 +13,16 @@
     }
 }
 
+.ballot-phone {
+  @include border-radius(0 0 0.25rem 0.25rem);
+}
+
 .ballot-block {
     max-width: 600px;
     margin: 1rem auto;
     border: 4px $brand-success solid;
     padding: 2rem;
+    @include border-radius(0.25rem);
 
     h3 {
         margin: -2rem;
