--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -45,6 +45,8 @@
   margin-bottom: 2rem;
   overflow: hidden;
   border-bottom: 1px $gray-lighter solid;
+  background-image: url('../images/pattern3.svg');
+  background-size: 633px;
 
   h2 {
     font-size: 2.5rem;
