--- a/resources/assets/sass/_footer.scss
+++ b/resources/assets/sass/_footer.scss
@@ -1,4 +1,18 @@
+.footer {
+    margin-bottom: 5rem;
+    padding-top: 2rem;
+    border-top: 1px $gray-lighter solid;
+
+    .languages {
+      background: $white;
+    }
+}
+
 .council-details {
+    h5 {
+        font-weight: 600;
+    }
+
     p:last-child {
         margin-bottom: 0;
     }
