--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -45,7 +45,7 @@ $enable-print-styles:       true;
 //
 // Settings for the `<body>` element.
 
-$body-bg:       $white;
+$body-bg:       $gray-lightest;
 $body-color:    $gray-dark;
 $inverse-bg:    $gray-dark;
 $inverse-color: $gray-lighter;
